k8s/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-service
  namespace: social-platform
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: client
