k8s/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-service
  namespace: social-platform
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: server
